--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
-  "name": "api-movie",
+  "name": "backend-project",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "start:prod": "NODE_ENV=production nodemon server.js"
   },
-  "author": "",
+  "author": "VoThanhLuan",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "corn": "^0.0.1",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-validator": "^6.12.0",
@@ -18,6 +22,7 @@
     "mkdirp": "^1.0.4",
     "mongodb": "^4.0.0",
     "mongoose": "^5.13.3",
+    "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "request": "^2.88.2",
     "require-at": "^1.0.6"
